# shine

./: CMakeLists.txt  README  doxyfile.in
include/: CMakeLists.txt  astnode.h  modulehandler.h  modulelinker.h  moduleloader.h  shine.h
sphinx_docs/: Makefile  conf.py  getting_started.rst  index.rst  introduction.rst  license.rst  make.bat
src/: CMakeLists.txt  astnode.cpp  modulehandler.cpp  modulelinker.cpp  moduleloader.cpp  shine.cpp
test/: 01_module_loader.cpp  02_module_linker.cpp  03_module_handler.cpp  CMakeLists.txt  README.TXT  TestOne.cpp  mod1.c
